--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -371,4 +371,10 @@
     <!-- Empty list message -->
     <string name="no_alarms">Будильники не установлены</string>
 
+    <!-- Accessibility labels for alarm buttons -->
+    <string name="profile_description">Профиль <xliff:g id="profile">%s</xliff:g></string>
+
+    <!-- No profile selected label -->
+    <string name="profile_no_selected">Профиль не выбран</string>
+
 </resources>
