--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -371,6 +371,22 @@
     <!-- Empty list message -->
     <string name="no_alarms">Будильники не установлены</string>
 
+    <!-- User-defined cities -->
+    <string name="menu_item_add">Добавить</string>
+    <string name="cities_add_city_title">Добавить город</string>
+    <string name="cities_add_city_city">Город:</string>
+    <string name="cities_add_city_timezone">Часовой пояс:</string>
+    <string name="cities_add_city_gps_cd">Нажмите для указания своего города</string>
+    <string name="cities_add_loading">Загрузка\u2026</string>
+    <string name="cities_add_searching">Поиск\u2026</string>
+    <string name="cities_add_gps_no_results">Запрос GPS не дал данных о местоположении</string>
+    <string name="cities_add_gps_not_available">GPS недоступен</string>
+    <string name="cities_add_already_exists">Город уже есть в базе</string>
+    <string name="cities_add_city_failed">Невозможно создать город</string>
+    <string name="cities_delete_city_title">Удалить город</string>
+    <string name="cities_delete_city_msg">Вы действительно хотите удалить <xliff:g id="city">%s</xliff:g>?</string>
+    <string name="cities_delete_city_failed">Невозможно удалить город</string>
+
     <!-- Accessibility labels for alarm buttons -->
     <string name="profile_description">Профиль <xliff:g id="profile">%s</xliff:g></string>
 
